made a change in titile

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="card">
-    <h1>Todo - App</h1>
+    <h1>Todo Appley</h1>
 
     <input id="todoInput" placeholder="Enter task" />
     <button onclick="addTodo()">Add</button>
